@@ -32,7 +32,7 @@ SUBDIRS = . po
 .SECONDARY:
 
 LIBUDEV_CURRENT=4
-LIBUDEV_REVISION=4
+LIBUDEV_REVISION=5
 LIBUDEV_AGE=3
 
 LIBGUDEV_CURRENT=1
@@ -40,7 +40,7 @@ LIBGUDEV_REVISION=3
 LIBGUDEV_AGE=1
 
 LIBSYSTEMD_LOGIN_CURRENT=7
-LIBSYSTEMD_LOGIN_REVISION=0
+LIBSYSTEMD_LOGIN_REVISION=1
 LIBSYSTEMD_LOGIN_AGE=7
 
 LIBSYSTEMD_DAEMON_CURRENT=0
@@ -48,11 +48,11 @@ LIBSYSTEMD_DAEMON_REVISION=10
 LIBSYSTEMD_DAEMON_AGE=0
 
 LIBSYSTEMD_ID128_CURRENT=0
-LIBSYSTEMD_ID128_REVISION=22
+LIBSYSTEMD_ID128_REVISION=23
 LIBSYSTEMD_ID128_AGE=0
 
 LIBSYSTEMD_JOURNAL_CURRENT=10
-LIBSYSTEMD_JOURNAL_REVISION=1
+LIBSYSTEMD_JOURNAL_REVISION=2
 LIBSYSTEMD_JOURNAL_AGE=10
 
 # Dirs of external packages
